--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
   <title>Login Page</title>
   <!-- <link rel="stylesheet" href="/style1.css" /> -->
   <link rel="stylesheet" href="/style2.css">
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   
 </head>
 <body>
