--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
     <title>Register Page</title>
     <link rel="stylesheet" href="/style1.css" />
     <link rel="stylesheet" href="/style2.css" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   </head>
   <body>
     <div class="login_and_register_logo">
